# pqkmeans

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  run_sample.py  setup.py  tox.ini
.github/workflows/: publish.yml  test.yml
pqkmeans/: __init__.py  evaluation.py
pqkmeans/clustering/: __init__.py  bkmeans.py  clustering_sample.py  cpp_implemented_clustering_sample.py  native_clustering_sample.py  pqkmeans.py  pure_python_clustering_sample.py
pqkmeans/encoder/: __init__.py  encoder_base.py  encoder_sample.py  itq_encoder.py  pq_encoder.py
src/: _pqkmeans.cpp
src/clustering/: bkmeans.cpp  bkmeans.h  bkmeans_impl.h  bkmeans_internal.cpp  bkmeans_internal.h  cpp_implemented_clustering_sample.cpp  cpp_implemented_clustering_sample.h  i_bkmeans_internal.h  native_clustering_sample.cpp  native_clustering_sample.h  pqkmeans.cpp  pqkmeans.h
src/encoder/: encoder_sample.cpp  encoder_sample.h
test/: first_test.py
test/clustering/: test_bkmeans.py  test_clustering_sample.py  test_cpp_implemented_clustering_sample.py  test_native_clustering_sample.py  test_pqkmeans.py  test_pure_python_clustering_sample.py
test/encoder/: test_encoder_sample.py  test_itq_encoder.py  test_pq_encoder.py
tutorial/: 1_pqkmeans.ipynb  2_image_clustering.ipynb  3_billion_scale_clustering.ipynb  4_comparison_to_faiss.ipynb
